# maya-mcp

./: .concepts.yml  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  HANDOFF.md  LICENSE  MODEL_STRATEGY.md  NOTICE.md  RAG_IMPLEMENTATION_PLAN.md  README.md  WORKFLOW_GUIDE.md  create_github_repo.sh  install.sh  pyproject.toml  requirements_backup.txt
.github/workflows/: ci.yml
console/: __init__.py  app.py  build_app_bundle.py  chat_widget.py  chat_window.py  claude_worker.py  maya_panel.py  qt_compat.py  server_panel.py  userSetup_snippet.py
core/: maya_bridge.py  requirements.txt  safety.py  server.py
core/docs/: ARNOLD_API.md  PYMEL_API.md  USD_API.md
core/rag/: __init__.py  build_index.py  config.py  search.py
scripts/: invariant_types.py
src/maya_mcp/: __init__.py  __main__.py  config.example.json  maya_bridge.py  server.py  suggestions.py
src/maya_mcp/docs/: ANTI_PATTERNS.md  CMDS_API.md
src/maya_mcp/rag/: build_index.py  config.py  search.py
tests/: conftest.py  requirements-test.txt  test_import_file.py  test_maya_bridge.py  test_ollama_mac_preflight.py  test_rag_search.py  test_safety.py  test_suggestions.py  test_vision3d.py
vision/: Caddyfile  __init__.py  gpu_server.py  maya_fix_position_smooth.py  maya_import_hires.py  pipeline_runner.py  requirements-server.txt  setup_gpu_server.sh  shape_remote.py  texture_remote.py
